# Debiased-Machine-Learning-with-High-Dimensional-Discrete-Covariates-A-Simulation-Study

./: README.md  main.py  main_new.py  pyproject.toml
dml_simulation/AIPW/: OLD_aipw.ipynb  backend_aipw.py  frontend_aipw.ipynb  plots2_aipw.ipynb  plots3_aipw.ipynb
dml_simulation/AIPW/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
dml_simulation/AIPW/catboost_info/learn/: events.out.tfevents
dml_simulation/ML/: plots_ml.ipynb  simulation_ml.py
src/: plots.ipynb  simulation.py
