[project]
name = "dml-simulation"
version = "0.1.0"
description = "Debiased Machine Learning with High-Dimensional Discrete Covariates"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Christian-Michael Ispas" }
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "statsmodels>=0.14.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "pandas>=2.1"
]

# ===============================
# Optional: command-line interface
# ===============================

[project.scripts]
run-simulation = "simulation:main"

# ===============================
# Packaging configuration
# ===============================

[tool.setuptools.packages.find]
where = ["."]
include = ["dml_simulation*"]

# ===============================
# Build system (mandatory)
# ===============================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
